# other_common

cmake_test/: CMakeLists.txt  Makefile  main.c
cmake_test/lib/: my_file.c  my_file.h
